...
            "save": "Save",
            "selectBaby": "Select Baby",
            "sideBreast": "%@ breast",
            "sideText": "%@ side",
            "sleep": "Sleep",
            "sleeping": "Sleeping",
            "solid": "Solid",
            "solidFood": "Solid food",
            "start": "Start",
            "started": "Started",
            "stop": "Stop",
            "suggestedSide": "%@ suggested",
            "switchLabel": "Switch",
...
